# lunch-app

./: .cursorrules  .env.example  .env.render  .gitignore  CURSOR_AI_GUIDELINES.md  README.md  RestaurantMap.js  alembic.ini  app.py  app_factory.py  app_monitor.py  cache_manager.py  cache_optimization.py  celery_config.py  check_schema.py  cleanup_data_integrity.py  config.py  create_test_users.py  data_integrity_check.py  database_init.py  database_optimization.py  database_optimizer.py  deploy.py  filter_restaurants.py  gunicorn.conf.py  init_db.py  init_restaurant_db.py  main.py  migrate_restaurant_data.py  migrate_schedule_models.py  package-lock.json  package.json  points_system.py  pyproject.toml  realtime_system.py  render.yaml  requirements.txt  restaurants.csv  scheduler_config.py  security_audit.py  (+4 more)
.expo/: settings.json
.github/workflows/: architecture.yml
api/: __init__.py  auth.py  clear_data.py  dangolpots.py  parties.py  points_api.py  proposals.py  restaurants.py  restaurants_v2.py  schedules.py  users.py
api/api/: auth.py  dangolpots.py  parties.py  users.py
auth/: auth_system.py  email_service.py  middleware.py  models.py  routes.py  utils.py
backend/: check_db.py  create_inquiry_table.py  create_test_accounts.py  create_tester_accounts.py  fix_postgresql_schema.py  fix_restaurant_schema.py  force_fix_postgresql_schema.py  migrate_random_lunch_models.py  remove_login_method_column.py  root_compatibility.py  run_server.py  security_audit.py  update_imports.py  update_user_schema.py
backend/api/: __init__.py  clear_data.py  compatibility.py  dangolpots.py  inquiries.py  parties.py  points_api.py  proposals.py  restaurants_v2.py  schedules.py  unified_blueprint.py  users.py
backend/app/: __init__.py  app.py  app.py.backup  app_factory.py  app_monitor.py  app_simple.py  cache_manager.py  celery_config.py  extensions.py  group_matching.py  main.py  realtime_system.py  scheduler_config.py  simple_app_factory.py  wsgi.py
backend/application/: repositories.py  unit_of_work.py
backend/auth/: __init__.py  admin_routes.py  auth_system.py  email_service.py  middleware.py  models.py  routes.py  unified_middleware.py  utils.py
backend/config/: auth_config.py  env_loader.py  module_loader.py
backend/core/: __init__.py  exceptions.py
backend/database/: api_optimization.py  api_optimization_report_20250907_205816.json  cache_optimization.py  check_schema.py  cleanup_data_integrity.py  create_fresh_database.py  data_integrity_check.py  database_fix.py  database_optimization.py  database_optimization_report_20250907_204133.json  init_db.py  init_restaurant_db.py  memory_config.json  memory_optimization.py  memory_optimization_report_20250907_205956.json  migrate_restaurant_data.py  migrate_schedule_models.py  performance_config.json  performance_dashboard.py  performance_monitor.py  performance_optimization_report.json  performance_optimizer.py  render_db_migration.py  render_password_migration.py  test_performance.py  (+1 more)
config/: auth_config.py  env.example  env_loader.py  module_loader.py
data/: deployment_report_20250907_203918.json  local_production_test_results.json  render_deployment_test_results.json  restaurants.csv  restaurants_707.xlsx  security_audit_report_20250907_204301.json  security_audit_report_20250907_204805.json  security_audit_report_20250907_205022.json  security_audit_report_20250907_205215.json  security_audit_report_20250907_205254.json  security_audit_report_20250907_205339.json  security_audit_report_20250907_205435.json
database/: optimization.py
deployment/: Dockerfile  alembic.ini  cache_config_template.env  deploy.py  docker-compose.yml  offline.env  production.env  render.yaml  root_compatibility.py
docs/: ARCHITECTURE_OVERVIEW.md  COMPREHENSIVE_DEVELOPER_GUIDE.md  DEVELOPER_GUIDE.md  ENVIRONMENT_SETUP.md  FINAL_PRODUCTION_FIXES.md  FINAL_SUMMARY.md  IMPROVEMENT_SUMMARY.md  MCDONALDS_DEVELOPMENT_GUIDE.md  OFFLINE_DEVELOPMENT.md  OPTIMIZATION_RESULTS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_FIXES_SUMMARY.md  QUICK_START_MCDONALDS.md  REDIS_SETUP_GUIDE.md  RENDER_DEPLOYMENT_GUIDE.md  SCHEDULE_IMPROVEMENT_README.md  SECURITY_SETUP_GUIDE.md  STABILIZATION_GUIDE.md  env_template.txt  render_env_fix.md  secure_secrets.txt
frontend/: .eslintrc.js  App.js  App.js.backup.current_working  App.js.broken  App.js.old  MOBILE_DEVELOPMENT_GUIDE.md  SimpleApp.js  TestApp.js  app.json  config.js  export_restaurants.js  metro.config.js  package-lock.json  package.json  start-mcdonalds.js  start-mobile.js  start-tunnel.js
migration/: dual_write_migration.py  validation.py
models/: app_models.py  restaurant_models.py  schedule_models.py
monitoring/: monitoring_routes.py
realtime/: advanced_chat_system.py  collaboration_system.py  notification_system.py
routes/: api.py  auth.py  chats.py  dev_api.py  file_upload.py  matching.py  notifications.py  optimized_chat.py  parties.py  points.py  proposals.py  restaurants.py  schedules.py  users.py  voting.py
scripts/: auth_fix.py  capture_baseline.py  generate_render_secrets.py  migrate_database.py  redis_setup.py  start_redis.bat  stop_redis.bat
security/: security_auditor.py
services/: schedule_service.py
tests/: simple_test.js  test_api_endpoints.py  test_local_production.py  test_production_api.py  test_render_deployment.py  test_render_production.py  test_results.json  test_results_production.json
utils/: auto_migration.py  cache_manager.py  datetime_utils.py  error_handler.py  error_monitor.py  file_manager.py  json_encoder.py  notification_manager.py  performance_monitor.py  recommendation_utils.py  safe_jsonify.py
(+292 files in other folders)
